// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag base 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="corn-tag corn-if corn-ac corn-tag-small corn-tag-primary"
      >
        <span
          class="taro-text"
        >
          3-9岁
        </span>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="corn-tag corn-if corn-ac corn-tag-small corn-tag-primary"
    >
      <span
        class="taro-text"
      >
        3-9岁
      </span>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Tag size 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="corn-tag corn-if corn-ac corn-tag-large corn-tag-primary"
      >
        <span
          class="taro-text"
        >
          3-9岁
        </span>
      </div>
      <div
        class="corn-tag corn-if corn-ac corn-tag-middle corn-tag-primary"
      >
        <span
          class="taro-text"
        >
          3-9岁
        </span>
      </div>
      <div
        class="corn-tag corn-if corn-ac corn-tag-small corn-tag-primary"
      >
        <span
          class="taro-text"
        >
          3-9岁
        </span>
      </div>
      <div
        class="corn-tag corn-if corn-ac corn-tag-mini corn-tag-primary"
      >
        <span
          class="taro-text"
        >
          3-9岁
        </span>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="corn-tag corn-if corn-ac corn-tag-large corn-tag-primary"
    >
      <span
        class="taro-text"
      >
        3-9岁
      </span>
    </div>
    <div
      class="corn-tag corn-if corn-ac corn-tag-middle corn-tag-primary"
    >
      <span
        class="taro-text"
      >
        3-9岁
      </span>
    </div>
    <div
      class="corn-tag corn-if corn-ac corn-tag-small corn-tag-primary"
    >
      <span
        class="taro-text"
      >
        3-9岁
      </span>
    </div>
    <div
      class="corn-tag corn-if corn-ac corn-tag-mini corn-tag-primary"
    >
      <span
        class="taro-text"
      >
        3-9岁
      </span>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Tag type 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="corn-tag corn-if corn-ac corn-tag-small corn-tag-error"
      >
        <span
          class="taro-text"
        >
          3-9岁
        </span>
      </div>
      <div
        class="corn-tag corn-if corn-ac corn-tag-small corn-tag-link"
      >
        <span
          class="taro-text"
        >
          3-9岁
        </span>
      </div>
      <div
        class="corn-tag corn-if corn-ac corn-tag-small corn-tag-pop"
      >
        <span
          class="taro-text"
        >
          3-9岁
        </span>
      </div>
      <div
        class="corn-tag corn-if corn-ac corn-tag-small corn-tag-primary"
      >
        <span
          class="taro-text"
        >
          3-9岁
        </span>
      </div>
      <div
        class="corn-tag corn-if corn-ac corn-tag-small corn-tag-warn"
      >
        <span
          class="taro-text"
        >
          3-9岁
        </span>
      </div>
      <div
        class="corn-tag corn-if corn-ac corn-tag-small corn-tag-urgent"
      >
        <span
          class="taro-text"
        >
          3-9岁
        </span>
      </div>
      <div
        class="corn-tag corn-if corn-ac corn-tag-small corn-tag-activity"
      >
        <span
          class="taro-text"
        >
          3-9岁
        </span>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="corn-tag corn-if corn-ac corn-tag-small corn-tag-error"
    >
      <span
        class="taro-text"
      >
        3-9岁
      </span>
    </div>
    <div
      class="corn-tag corn-if corn-ac corn-tag-small corn-tag-link"
    >
      <span
        class="taro-text"
      >
        3-9岁
      </span>
    </div>
    <div
      class="corn-tag corn-if corn-ac corn-tag-small corn-tag-pop"
    >
      <span
        class="taro-text"
      >
        3-9岁
      </span>
    </div>
    <div
      class="corn-tag corn-if corn-ac corn-tag-small corn-tag-primary"
    >
      <span
        class="taro-text"
      >
        3-9岁
      </span>
    </div>
    <div
      class="corn-tag corn-if corn-ac corn-tag-small corn-tag-warn"
    >
      <span
        class="taro-text"
      >
        3-9岁
      </span>
    </div>
    <div
      class="corn-tag corn-if corn-ac corn-tag-small corn-tag-urgent"
    >
      <span
        class="taro-text"
      >
        3-9岁
      </span>
    </div>
    <div
      class="corn-tag corn-if corn-ac corn-tag-small corn-tag-activity"
    >
      <span
        class="taro-text"
      >
        3-9岁
      </span>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Tag type 2`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="corn-tag corn-if corn-ac corn-tag-small corn-tag-error corn-tag-ghost"
      >
        <span
          class="taro-text"
        >
          3-9岁
        </span>
      </div>
      <div
        class="corn-tag corn-if corn-ac corn-tag-small corn-tag-link corn-tag-ghost"
      >
        <span
          class="taro-text"
        >
          3-9岁
        </span>
      </div>
      <div
        class="corn-tag corn-if corn-ac corn-tag-small corn-tag-pop corn-tag-ghost"
      >
        <span
          class="taro-text"
        >
          3-9岁
        </span>
      </div>
      <div
        class="corn-tag corn-if corn-ac corn-tag-small corn-tag-primary corn-tag-ghost"
      >
        <span
          class="taro-text"
        >
          3-9岁
        </span>
      </div>
      <div
        class="corn-tag corn-if corn-ac corn-tag-small corn-tag-warn corn-tag-ghost"
      >
        <span
          class="taro-text"
        >
          3-9岁
        </span>
      </div>
      <div
        class="corn-tag corn-if corn-ac corn-tag-small corn-tag-urgent corn-tag-ghost"
      >
        <span
          class="taro-text"
        >
          3-9岁
        </span>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="corn-tag corn-if corn-ac corn-tag-small corn-tag-error corn-tag-ghost"
    >
      <span
        class="taro-text"
      >
        3-9岁
      </span>
    </div>
    <div
      class="corn-tag corn-if corn-ac corn-tag-small corn-tag-link corn-tag-ghost"
    >
      <span
        class="taro-text"
      >
        3-9岁
      </span>
    </div>
    <div
      class="corn-tag corn-if corn-ac corn-tag-small corn-tag-pop corn-tag-ghost"
    >
      <span
        class="taro-text"
      >
        3-9岁
      </span>
    </div>
    <div
      class="corn-tag corn-if corn-ac corn-tag-small corn-tag-primary corn-tag-ghost"
    >
      <span
        class="taro-text"
      >
        3-9岁
      </span>
    </div>
    <div
      class="corn-tag corn-if corn-ac corn-tag-small corn-tag-warn corn-tag-ghost"
    >
      <span
        class="taro-text"
      >
        3-9岁
      </span>
    </div>
    <div
      class="corn-tag corn-if corn-ac corn-tag-small corn-tag-urgent corn-tag-ghost"
    >
      <span
        class="taro-text"
      >
        3-9岁
      </span>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
